--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		  	 .champ1 {border: 1px solid green;}
 		  	 .champ2 {border: 1px solid red;}
 		  </style>
-		  <img src="images/image.jpg" id="image" />	
+		  <img src="image.jpg" id="image" />	
 		  <form>
 		    <button type="button" name="button" id="clique-moi" >Clique-moi !</button>
 		  </form>
